# got_it

./: Makefile  Pipfile  README.MD  pyproject.toml
got_it/: __init__.py  args.py  decorators.py  parsing.py  typing.py
tests/: test_decorators.py
